Truncate the course name if too long; style the 'n/m Lessons Complete'

--- a/main/src/webapp/WEB-INF/styles/toplevel.css
+++ b/main/src/webapp/WEB-INF/styles/toplevel.css
@@ -78,11 +78,30 @@ img.lp_heading_content {
 .lp_course_summary_image {
     max-height: 250px;
     max-width: 200px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 .lp_course_summary_name {
     font-size: small;
-    margin-top: 25px;
+    font-weight: bold;
+}
+.lp_truncate {
+    max-width: 200px;
+    display: inline-block;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: ellipsis;     /** IE6+, Firefox 7+, Opera 11+, Chrome, Safari **/
+    -o-text-overflow: ellipsis;  /** Opera 9 & 10 **/
+}
+.lp_course_fully_completed {
+    color: green;
+    font-style: italic;
+}
+.lp_course_part_completed {
+    color: grey;
+    font-style: italic;
+}
+.lp_course_not_started {
+    color: grey;
+    font-style: italic;
 }
