--- a/main/src/webapp/WEB-INF/styles/toplevel.css
+++ b/main/src/webapp/WEB-INF/styles/toplevel.css
@@ -64,9 +64,13 @@ img.lp_heading_content {
 .lp_category_section * {
     background-color: #ECEFF4;
 }
+.lp_category_section .row {
+    padding-bottom: 10px;
+}
 .lp_category_section_header {
     margin-top: 20px;
     margin-bottom: 10px;
+    font-size: large;
 }
 .lp_course_section {
     width: 100%;
@@ -94,7 +98,7 @@ img.lp_heading_content {
     -o-text-overflow: ellipsis;  /** Opera 9 & 10 **/
 }
 .lp_course_fully_completed {
-    color: green;
+    color: #5ECF80;
     font-style: italic;
 }
 .lp_course_part_completed {
@@ -104,4 +108,58 @@ img.lp_heading_content {
 .lp_course_not_started {
     color: grey;
     font-style: italic;
+}
+.lp_view_info_btn {
+    margin-top: 10px;
+    border-color: white;
+    background-color: white;
+    color: #218DC3;
+    border-radius: 15px;
+}
+.lp_hide_info_btn {
+    margin-top: 10px;
+    background-color: #218DC3;
+    color: white;
+    border-radius: 15px;
+}
+.lp_hide_info_btn span {
+    background-color: #218DC3;
+}
+.lp_category_section * .lp_expanded_course * {
+    background-color: white;
+}
+.lp_expanded_course {
+    width: 100%;
+}
+.lp_course_expanded_image {
+    max-height: 350px;
+    max-width: 300px;
+    margin-top: 25px;
+    margin-bottom: 15px;
+}
+.lp_course_expanded_name {
+    font-size: x-large;
+    margin-top: 25px;
+    margin-bottom: 15px;
+}
+.lp_course_expanded_description {
+    margin-bottom: 15px;
+}
+.lp_course_expanded_links {
+    margin-bottom: 15px;
+}
+.lp_course_expanded_lessons {
+}
+.lp_course_expanded_lesson {
+    margin-bottom: 10px;
+    border-bottom: medium;
+}
+.lp_course_expanded_lesson_title {
+    font-weight: bold;
+}
+.lp_star_filled {
+    color: orange;
+}
+.lp_star_empty {
+    color: grey;
 }
