Use zero lesson stars, style the <hr> better

--- a/main/src/webapp/WEB-INF/styles/toplevel.css
+++ b/main/src/webapp/WEB-INF/styles/toplevel.css
@@ -163,3 +163,7 @@ img.lp_heading_content {
 .lp_star_empty {
     color: grey;
 }
+.lp_course_expanded_lesson_divider {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
