Add a blank footer to prevent unnecessary scrolling when opening a panel at the bottom of the page

--- a/main/src/webapp/WEB-INF/styles/toplevel.css
+++ b/main/src/webapp/WEB-INF/styles/toplevel.css
@@ -64,6 +64,13 @@ img.lp_heading_content {
     margin-bottom: 5px;
 }
 
+.lp_footer_bar {
+    height: 50px;
+}
+.lp_footer_content {
+    height: 100%;
+}
+
 .lp_category_section * {
     background-color: #ECEFF4;
 }
