Filter by Expiry Date and DateAvailable; check PrerequisitesMet to enable view button

--- a/main/src/webapp/WEB-INF/styles/toplevel.css
+++ b/main/src/webapp/WEB-INF/styles/toplevel.css
@@ -116,7 +116,7 @@ img.lp_heading_content {
     margin-top: 10px;
     margin-bottom: 10px;
 }
-.lp_view_info_btn {
+.lp_view_info_btn, .lp_view_info_btn:disabled {
     border-color: white;
     background-color: white;
     color: #218DC3;
