Filter courses by name, category, and tick-boxes

--- a/main/src/webapp/WEB-INF/styles/toplevel.css
+++ b/main/src/webapp/WEB-INF/styles/toplevel.css
@@ -71,6 +71,10 @@ img.lp_heading_content {
     height: 100%;
 }
 
+.lp_filter_bar {
+    margin-top: 15px;
+}
+
 .lp_category_section * {
     background-color: #ECEFF4;
 }
