--- a/main/src/webapp/WEB-INF/styles/toplevel.css
+++ b/main/src/webapp/WEB-INF/styles/toplevel.css
@@ -5,7 +5,7 @@
     border-radius: 15px;
 }
 
-.lp_heading * {
+.lp_heading {
     background-color: #2C3E51;
     color: white;
 }
@@ -95,12 +95,16 @@ img.lp_heading_content {
     font-size: smaller;
 }
 
-.lp_category_section {
+.lp_category_section, .lp_error_section {
     clear: both;
     width: 100%;
-}
-.lp_category_section * {
     background-color: #ECEFF4;
+}
+.lp_error_message {
+    color: orangered;
+    padding-top: 10px;
+    padding-left: 5%;
+    padding-bottom: 10px;
 }
 .lp_category_section_header {
     padding-top: 20px;
