Added Heuristic to split course description into paragraphs

--- a/main/src/webapp/WEB-INF/styles/toplevel.css
+++ b/main/src/webapp/WEB-INF/styles/toplevel.css
@@ -244,6 +244,9 @@ input[type="checkbox"].lp_filter_checkbox {
     margin: 0;
     /* all the real styling is done using the TextOverflowClamp.js library. */
 }
+.lp-paragraph-expanded {
+    margin-bottom: 10px;
+}
 .lp-paragrap-more {
     float: right;
 }
