Fixed some trivial typos

--- a/main/src/webapp/WEB-INF/styles/toplevel.css
+++ b/main/src/webapp/WEB-INF/styles/toplevel.css
@@ -247,7 +247,7 @@ input[type="checkbox"].lp_filter_checkbox {
 .lp-paragraph-expanded {
     margin-bottom: 10px;
 }
-.lp-paragrap-more {
+.lp-paragraph-more {
     float: right;
 }
 .lp_course_expanded_link {
